# GPGPU_2017

./: .gitignore  CMakeLists.txt  Makefile
lab0/: main.cu
lab1/: cutil_math.h  lab1.cu
lab1_indep/: engine.cu  engine.cu.bak  engine_working.cu.bak  float_read  list  read_list.cpp.bak
lab2/: CMakeLists.txt  counting.cu  main.cu
lab3/: .gitignore  CMakeLists.txt  lab3.cu
lab3/data/mona/: bg.pgm  mask.pgm  target.pgm
lab3/doc/: report.tex
lab_test/: render.cu
